# base64decoder

./: CMakeLists.txt  b64  base64CPPREST.cpp  base64CPPREST.hpp  base64decoder.cpp  main.cpp  teste  teste.cpp
B64/include/b64/: decode.h  encode.h
